--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="board circle" id="board">
+  <div class="board" id="board">
     <div class="cell x" data-cell></div>
     <div class="cell circle" data-cell></div>
     <div class="cell" data-cell></div>
@@ -19,8 +19,8 @@
     <div class="cell" data-cell></div> 
     <div class="cell" data-cell></div>
   </div>
-  <div class="winning-message">
-    <div class="data-winning-massage-text"></div>
+  <div class="winning-message" id="winningMessage">
+    <div class="data-winning-massage-text">X Wins!</div>
     <button id="restartButton">Restart!</button>
   </div>
 </body>
