--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="cell" data-cell></div>
   </div>
   <div class="winning-message" id="winningMessage">
-    <div class="data-winning-massage-text"></div>
+    <div data-winning-massage-text></div>
     <button id="restartButton">Restart!</button>
   </div>
 </body>
