--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="favicon.ico" />
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
-  <title>Document</title>
+  <title>Tic Tac Toe 井字遊戲</title>
 </head>
 
 <body>
@@ -23,7 +24,7 @@
   </div>
   <div class="winning-message" id="winningMessage">
     <div data-winning-massage-text></div>
-    <button id="restartButton">Restart!</button>
+    <button id="restartButton">重新開始!</button>
   </div>
 </body>
 
